resources/tests/invalid_syntax/fn_decl_ret_type.ct
//`Expected a '->'!
//1
fn hello()i64;